[package]
name = "Ry_TSDB"
version = "0.1.1"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
memmap2 = "0.5"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crc32fast = "1.3"
libc = "0.2"
